Fix navbar overflow bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ body {
   background-size: cover; /* This property ensures the image covers the entire viewport */
   background-repeat: no-repeat; /* Prevent the image from repeating */
   background-attachment: fixed; /* Keeps the background fixed as the content scrolls */
+  overflow-x: hidden;
 }
 .navbar {
   background-color: #2b2b2b;
